Tweak logo sizing to match website, prevent clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h1 {
   align-items: center;
 }
 .sefaria-logo {
-  height: 22px;
+  width: 92px;
 }
 .mega-div {
   display: flex;
